--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -42,8 +42,8 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
-    - name: npm install, build, and test
-      run: |
+    - name: npm install -g @angular/cli@17
+      run: 
         npm install -g@angular/cli@17
         npm run build --if-present
         npm run test --if-present
